--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		<meta
 			data-react-helmet="true"
 			name="twitter:creator"
-			content="shakeer@gmail.com"
+			content="masrur.jsr@gmail.com"
 		/>
 		<meta
 			data-react-helmet="true"
@@ -52,7 +52,7 @@
 			href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Shaik Shakeer | Full Stack Developer</title>
+		<title>Md Masrur | Full Stack Developer</title>
 		<link href="./static/css/2.e44fbca6.chunk.css" rel="stylesheet" />
 		<link
 			href="./static/css/main.58c5f3a5.chunk.css"
